--- a/template/index.html
+++ b/template/index.html
@@ -15,6 +15,16 @@
 
 <body>
             <h1 class="text-center">VILLE APP</h1>
+            <input type="text" 
+                    placeholder="Ajouter une ville" 
+                    class="form-control w-50 mx-auto m-3" />
+            <button>Ajouter</button>
+
+            <div class="filter"> 
+                <input type="text" 
+                       placeholder="filter task by title" 
+                       class="form-control w-50 mx-auto m-3"/>
+                 </div>
             <ul class="list-group">
                 <li class="list-group-item m-2 border d-flex justify-content-between align-items-center">
                      <h1 class="bottom-50 end-50">RABAT</h1>
